--- a/UserDetails/form/templates/forms/user_view_detail.html
+++ b/UserDetails/form/templates/forms/user_view_detail.html
@@ -46,11 +46,15 @@
 					</th>	
 
 					<th>
-						Male
+						Gender
 					</th>
 
 					<th>
 						State
+					</th>
+
+					<th>
+						Dept
 					</th>				
 
 					<!-- <th>
@@ -97,6 +101,10 @@
 					<td>
 						{{each.state}}
 					</td>
+
+					<td>
+						{{each.deptID}}
+					</td>
 				
 					<!-- <td>
 						{{each.created_at}}
@@ -131,11 +139,36 @@
 <p>
 {% if no_of_rows  %}
 {{no_of_rows}} records
+{{total_salary}} Total
+{{max_salary}} Max
+{{min_salary}} Min
 {% else%}
 No Records found
 {%endif%}
 
 </p>
+
+<table id="data_table" class="table table-striped table-bordered" >
+	<thead>
+		<tr>
+			
+			<th>
+				Dept
+			</th>				
+		</tr>
+	</thead>
+	<tbody>
+		{{max_salary}}
+		{{min_salary}}
+		{% for each in usercategory_list %}
+		<tr>
+			<td>
+				{{each.deptID}}
+			</td>		
+		</tr>
+		{%endfor%}
+	</tbody>
+</table>
 
 {% if usercategory_list.has_other_pages %}
   <ul class="pagination">
