--- a/UserDetails/form/templates/forms/user_view_detail.html
+++ b/UserDetails/form/templates/forms/user_view_detail.html
@@ -1,8 +1,11 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+ <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+
 {% extends "base.html" %}
 {% block body %}
 
-<form >
+<form>
 	<!-- <h1>hell {% now "jS F Y H:i" %}</h1> -->
 <div class="col-md-6">
 	<p class="pull-right">
@@ -15,9 +18,6 @@
 			{% if search %} value="{{search| title}}" {%endif%}>
 			<button type="submit">Search</button>
 		</label>
-<!-- 	<input type="radio" name="gender" value="male" checked> Male<br>
-  <input type="radio" name="gender" value="female"> Female<br> -->
-
 	</p>
 </div>
 
@@ -43,6 +43,10 @@
 
 					<th>
 						TDS
+					</th>
+
+					<th>
+						Mobile
 					</th>	
 
 					<th>
@@ -95,6 +99,10 @@
 					</td>
 
 					<td>
+						{{each.phone_number}}
+					</td>
+
+					<td>
 						{{each.gender}}
 					</td>
 
@@ -136,62 +144,64 @@
 </div>
 </div>
 
-<p>
+<!-- <p>
 {% if no_of_rows  %}
 {{no_of_rows}} records
 {{total_salary}} Total
-{{max_salary}} Max
-{{min_salary}} Min
 {% else%}
 No Records found
 {%endif%}
 
-</p>
+</p> -->
 
-<table id="data_table" class="table table-striped table-bordered" >
+
+<h1>Summary Table</h1>
+<table class="table table-bordered table-striped table-hover">
 	<thead>
 		<tr>
-			
-			<th>
-				Dept
-			</th>				
+			<th>Name</th>
+			<th>No of Emp</th>
+			<th>Min Sal</th>
+			<th>Max Sal</th>
+			<th>Total</th>
 		</tr>
 	</thead>
 	<tbody>
-		{{max_salary}}
-		{{min_salary}}
-		{% for each in usercategory_list %}
+		{% for each in dept_table %}
 		<tr>
-			<td>
-				{{each.deptID}}
-			</td>		
+			<td>{{each.name}}</td>
+			<td>{{each.No_of_Emp}}</td>
+			<td>{{each.min_sal}}</td>
+			<td>{{each.max_sal}}</td>
+			<td>{{each.sum_sal}}</td>
 		</tr>
 		{%endfor%}
 	</tbody>
 </table>
 
-{% if usercategory_list.has_other_pages %}
-  <ul class="pagination">
-    {% if usercategory_list.has_previous %}
-      <li><a href="?page={{ usercategory_list.previous_page_number }}{% if search%}&search={{search}}{%endif%}">&laquo;</a></li>
-    {% else %}
-      <li class="disabled"><span>&laquo;</span></li>
-    {% endif %}
-    {% for i in usercategory_list.paginator.page_range %}
-      {% if usercategory_list.number == i %}
-        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-      {% else %}
-        <li><a href="?page={{ i }}{% if search%}&search={{search}}{%endif%}">{{ i }}</a></li>
-      {% endif %}
-    {% endfor %}
-    {% if usercategory_list.has_next %}
-      <li><a href="?page={{ usercategory_list.next_page_number }}{% if search%}&search={{search}}{%endif%}">&raquo;</a></li>
-    {% else %}
-      <li class="disabled"><span>&raquo;</span></li>
-    {% endif %}
-  </ul>
-{% endif %}
 
+{% block extracss %}
+ <link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.css">
+{%endblock%}
+
+{% block extrajs %}
+<script type="text/javascript" src="/static/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="/static/js/dataTables.bootstrap.min.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(function() {
+    $('#data_table').DataTable();
+} );
+</script>
+{%endblock%}
 
 </form>
 {%endblock%}
+
+
+
+
+
+
+
+
